<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.demomvpdb.ui.signup.SignupActivity">


    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signup_here"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/twenty_two_sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tl_signupEmail"
            style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/twenty_two_dp"
            android:layout_marginTop="@dimen/fifteen_dp"
            android:layout_marginRight="@dimen/twenty_two_dp"
            android:layout_marginBottom="@dimen/twelve_dp"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_signupEmail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/enter_email"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tl_signupPassword"
            style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/twenty_two_dp"
            android:layout_marginRight="@dimen/twenty_two_dp"
            android:layout_marginBottom="@dimen/twelve_dp"
            app:counterEnabled="true"
            app:errorEnabled="true"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_signupPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/enter_password"

                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tl_signupRePassword"
            style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/twenty_two_dp"
            android:layout_marginRight="@dimen/twenty_two_dp"
            android:layout_marginBottom="@dimen/twelve_dp"
            app:counterEnabled="true"
            app:errorEnabled="true"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_signupRePassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/retype_password"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/black"
            android:padding="@dimen/fourteen_dp"
            android:text="@string/signup"
            android:textColor="@color/white"
            android:textSize="@dimen/fourteen_sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_goToLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fifteen_dp"
            android:text="@string/exisisting_user_login_now"
            android:textAlignment="center"
            android:textColor="@android:color/holo_red_light"
            android:textSize="@dimen/eighteen_sp" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/proggressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>